--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 config = "0.13.3"
-reqwest = "0.11.18"
+reqwest = { version = "0.11.18", features = ["blocking"] }
 serde = { version = "1", features = ["derive"] }
 
