--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.2.7", features = ["derive"] }
 config = "0.13.3"
 reqwest = { version = "0.11.18", features = ["blocking"] }
 serde = { version = "1", features = ["derive"] }
