Add os-based artifact name and only archive executeable files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,5 +33,5 @@ jobs:
       - name: Archive artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: binaries
-          path: target/release/
+          name: ${{ matrix.os }}
+          path: target/release/server-runner
