Add multiple paths since regexes do not work here

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,4 +34,6 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: ${{ matrix.os }}
-          path: target/release/server-runner(\.exe)?
+          path: |
+            target/release/server-runner
+            target/release/server-runner.exe
