--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.2.7", features = ["derive"] }
 config = "0.13.3"
-reqwest = { version = "0.11.18", features = ["blocking", "rustls-tls"] }
+reqwest = { version = "0.11.18", features = ["blocking", "native-tls-vendored"] }
 serde = { version = "1", features = ["derive"] }
 
