--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ config = "0.13.3"
 reqwest = { version = "0.11.18", features = ["blocking", "native-tls-vendored"] }
 serde = { version = "1", features = ["derive"] }
 
+[dev-dependencies]
+assert_cmd = "2.0.11"
+
