--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ description = "Runs servers, checks for HTTP 200 and runs a command when all ser
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.71"
 clap = { version = "4.2.7", features = ["derive"] }
 config = "0.13.3"
 reqwest = { version = "0.11.18", features = ["blocking", "native-tls-vendored"] }
