--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,14 @@ jobs:
         with:
           toolchain: stable
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+
+      - name: Install Node modules
+        run: yarn install
+
       - name: Build and Run Tests
         run: cargo test
 
