--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,33 +10,57 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.runners.image }}
+
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        target: [x86_64-unknown-linux-gnu, x86_64-pc-windows-msvc, x86_64-apple-darwin, aarch64-unknown-linux-gnu, aarch64-apple-darwin]
+        runners:
+          - name: macos-aarch64
+            image: macos-latest
+            target: aarch64-apple-darwin
+
+          - name: macos-x86-64
+            image: macos-latest
+            target: x86_64-apple-darwin
+
+          - name: linux-x86-64
+            image: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+
+          - name: linux-aarch64
+            image: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+
+          - name: windows-x86-64
+            image: windows-latest
+            target: x86_64-pc-windows-msvc
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install Rust
+      - name: Set up Rust
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          target: ${{ matrix.target }}
-          override: true
+
+      - name: Install Linux aarch64 gcc
+        if: ${{ matrix.runners.name == 'linux-aarch64' }}
+        run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu
+
+      - name: Install build target
+        run: rustup target add ${{ matrix.runners.target }}
 
       - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --release --target ${{ matrix.target }}
+        run: cargo build --release --target=${{ matrix.runners.target }}
 
-      - name: Upload artifact
+      - name: Archive artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ github.event.inputs.version }}-${{ matrix.target }}
-          path: target/${{ matrix.target }}/release/*
+          name: server-runner-${{ inputs.version }}-${{ matrix.runners.name }}
+          path: |
+            target/${{ matrix.runners.target }}/release/server-runner
+            target/${{ matrix.runners.target }}/release/server-runner.exe
 
   release:
     needs: build
