--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,23 @@ on:
         default: '1.0.0'
 
 jobs:
+  create_release:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.event.inputs.version }}
+          release_name: ${{ github.event.inputs.version }}
+          draft: true
+          prerelease: false
+
   build:
     runs-on: ${{ matrix.runners.image }}
+    needs: create_release
 
     strategy:
       matrix:
@@ -18,22 +33,27 @@ jobs:
           - name: macos-aarch64
             image: macos-latest
             target: aarch64-apple-darwin
+            artifact: server-runner
 
           - name: macos-x86-64
             image: macos-latest
             target: x86_64-apple-darwin
+            artifact: server-runner
 
           - name: linux-x86-64
             image: ubuntu-latest
             target: x86_64-unknown-linux-gnu
+            artifact: server-runner
 
           - name: linux-aarch64
             image: ubuntu-latest
             target: aarch64-unknown-linux-gnu
+            artifact: server-runner
 
           - name: windows-x86-64
             image: windows-latest
             target: x86_64-pc-windows-msvc
+            artifact: server-runner.exe
 
     steps:
       - name: Checkout code
@@ -58,92 +78,17 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: server-runner-${{ inputs.version }}-${{ matrix.runners.name }}
-          path: |
-            target/${{ matrix.runners.target }}/release/server-runner
-            target/${{ matrix.runners.target }}/release/server-runner.exe
+          path: target/${{ matrix.runners.target }}/release/${{ matrix.runners.artifact }}
 
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Compress artifact ${{ matrix.runners.name }}
+        run: tar -czf server-runner-${{ github.event.inputs.version }}-${{ matrix.runners.name }}.tar.gz server-runner-${{ github.event.inputs.version }}-${{ matrix.runners.name }}/${{ matrix.runners.artifact }}
 
-      - name: Download artifacts
-        uses: actions/download-artifact@v2
-
-      - name: Compress artifact linux-x86-64
-        run: tar -czf server-runner-${{ github.event.inputs.version }}-linux-x86-64.tar.gz server-runner-${{ github.event.inputs.version }}-linux-x86-64/server-runner
-
-      - name: Compress artifact linux-aarch64
-        run: tar -czf server-runner-${{ github.event.inputs.version }}-linux-aarch64.tar.gz server-runner-${{ github.event.inputs.version }}-linux-aarch64/server-runner
-
-      - name: Compress artifact macos-x86-64
-        run: tar -czf server-runner-${{ github.event.inputs.version }}-macos-x86-64.tar.gz server-runner-${{ github.event.inputs.version }}-macos-x86-64/server-runner
-
-      - name: Compress artifact macos-aarch64
-        run: tar -czf server-runner-${{ github.event.inputs.version }}-macos-aarch64.tar.gz server-runner-${{ github.event.inputs.version }}-macos-aarch64/server-runner
-
-      - name: Compress artifact windows-x86-64
-        run: tar -czf server-runner-${{ github.event.inputs.version }}-windows-x86-64.tar.gz server-runner-${{ github.event.inputs.version }}-windows-x86-64/server-runner.exe
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.event.inputs.version }}
-          release_name: ${{ github.event.inputs.version }}
-          draft: true
-          prerelease: false
-
-      - name: Upload Release Asset linux-x86-64
+      - name: Upload Release Asset ${{ matrix.runners.name }}
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./server-runner-${{ github.event.inputs.version }}-linux-x86-64.tar.gz
-          asset_name: server-runner-${{ github.event.inputs.version }}-linux-x86-64.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload Release Asset linux-aarch64
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./server-runner-${{ github.event.inputs.version }}-linux-aarch64.tar.gz
-          asset_name: server-runner-${{ github.event.inputs.version }}-linux-aarch64.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload Release Asset macos-x86-64
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./server-runner-${{ github.event.inputs.version }}-macos-x86-64.tar.gz
-          asset_name: server-runner-${{ github.event.inputs.version }}-macos-x86-64.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload Release Asset macos-aarch64
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./server-runner-${{ github.event.inputs.version }}-macos-aarch64.tar.gz
-          asset_name: server-runner-${{ github.event.inputs.version }}-macos-aarch64.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload Release Asset windows-x86-64
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./server-runner-${{ github.event.inputs.version }}-windows-x86-64.tar.gz
-          asset_name: server-runner-${{ github.event.inputs.version }}-windows-x86-64.tar.gz
+          upload_url: ${{ needs.create_release.outputs.upload_url }}
+          asset_path: ./server-runner-${{ github.event.inputs.version }}-${{ matrix.runners.name }}.tar.gz
+          asset_name: server-runner-${{ github.event.inputs.version }}-${{ matrix.runners.name }}.tar.gz
           asset_content_type: application/gzip
