--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,9 @@ jobs:
     runs-on: ${{ matrix.runners.image }}
     needs: create_release
 
+    env:
+      ArtifactName: server-runner-${{ inputs.version }}-${{ matrix.runners.name }}
+
     strategy:
       matrix:
         runners:
@@ -79,11 +82,11 @@ jobs:
       - name: Archive artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: server-runner-${{ inputs.version }}-${{ matrix.runners.name }}
+          name: ${{ env.ArtifactName }}
           path: target/${{ matrix.runners.target }}/release/${{ matrix.runners.artifact }}
 
       - name: Compress artifact ${{ matrix.runners.name }}
-        run: tar -czf server-runner-${{ github.event.inputs.version }}-${{ matrix.runners.name }}.tar.gz -C ./target/${{ matrix.runners.target }}/release ${{ matrix.runners.artifact }}
+        run: tar -czf ${{ env.ArtifactName }}.tar.gz -C ./target/${{ matrix.runners.target }}/release ${{ matrix.runners.artifact }}
 
       - name: Upload Release Asset ${{ matrix.runners.name }}
         uses: actions/upload-release-asset@v1
@@ -91,6 +94,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ needs.create_release.outputs.upload_url }}
-          asset_path: ./server-runner-${{ github.event.inputs.version }}-${{ matrix.runners.name }}.tar.gz
-          asset_name: server-runner-${{ github.event.inputs.version }}-${{ matrix.runners.name }}.tar.gz
+          asset_path: ./${{ env.ArtifactName }}.tar.gz
+          asset_name: ${{ env.ArtifactName }}.tar.gz
           asset_content_type: application/gzip
