--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,6 +57,11 @@ jobs:
             target: x86_64-pc-windows-msvc
             artifact: server-runner.exe
 
+          - name: windows-aarch64
+            image: windows-latest
+            target: aarch64-pc-windows-msvc
+            artifact: server-runner.exe
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
