refactor: fix minor issues and add tests

--- a/invalid_yaml.yaml
+++ b/invalid_yaml.yaml
@@ -1,6 +1,6 @@
 servers:
-  - name: "Hello World"
+  - name: "Test Server"
     url: "http://localhost:3000"
     command: "simple-http-server -p 3000 -i -s"
-    timeout: 10
-command: "sleep 5s"
+command: "echo test"
+[invalid yaml syntax: unclosed bracket
