--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ reqwest = { version = "0.12.19", features = [
     "native-tls-vendored",
 ] }
 serde = { version = "1", features = ["derive"] }
+shlex = "1.3.0"
 simplelog = "0.12.2"
 
 [dev-dependencies]
