--- a/empty_command.yaml
+++ b/empty_command.yaml
@@ -1,6 +1,5 @@
 servers:
-  - name: "Hello World"
+  - name: "Test Server"
     url: "http://localhost:3000"
     command: "simple-http-server -p 3000 -i -s"
-    timeout: 10
-command: "sleep 5s"
+command: ""
