feat: complete restructuring

--- a/servers.yaml
+++ b/servers.yaml
@@ -1,6 +1,6 @@
 servers:
   - name: "Hello World"
     url: "http://localhost:3000"
-    command: "simple-http-server -p 3000 -i -s"
+    command: "sleep 100"
     timeout: 10
-command: "sleep 5s"
+command: "echo done"
