--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "server-runner"
-version = "1.6.0"
+version = "2.0.0"
 edition = "2024"
 license-file = "LICENSE"
 homepage = "https://github.com/webcodr/server-runner"
@@ -14,14 +14,15 @@ description = "Runs servers, checks for HTTP 200 and runs a command when all ser
 [dependencies]
 anyhow = "1.0.98"
 clap = { version = "4.5.39", features = ["derive"] }
-config = "0.15.11"
 ctrlc = "3.4.7"
 log = "0.4.27"
+regex = "1.11.1"
 reqwest = { version = "0.12.19", features = [
     "blocking",
     "native-tls-vendored",
 ] }
 serde = { version = "1", features = ["derive"] }
+serde_yaml = "0.9"
 shlex = "1.3.0"
 simplelog = "0.12.2"
 
