--- a/tests/multiple_servers.yaml
+++ b/tests/multiple_servers.yaml
@@ -1,13 +1,13 @@
 servers:
   - name: "Server One"
     url: "http://localhost:8001"
-    command: "echo 'fake server 1'"
+    command: "sleep 100"
     timeout: 2
   - name: "Server Two"
     url: "http://localhost:8002"
-    command: "echo 'fake server 2'"
+    command: "sleep 100"
     timeout: 1
   - name: "Server Three"
     url: "http://localhost:8003"
-    command: "echo 'fake server 3'"
-command: "echo 'all done'"
+    command: "sleep 100"
+command: "echo all done"
